--- a/contact.html
+++ b/contact.html
@@ -298,7 +298,7 @@
 					</div>
 	</div>
 		<div id="Menu_510154_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
-		<a href="contact.html" target="_self" class="main-nav-item fontm OneRow">联系我们</a>
+		<a href="contact.html" target="_self" class="main-nav-item fontm OneRow main-nav-item-hover">联系我们</a>
 				<div id="SubMenu_510154_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
@@ -467,7 +467,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 
 </div>
 <div class="ModuleItem  StaticModule mhidden-xs mhidden-md mhidden-lg" wo="600" id="module_8932277"  >
-<div class="ModuleCustomFormGiant layout-101 layout-color-green module_8932277 clearfix">
+<div class="ModuleCustomFormGiant layout-101 layout-color-green module_8932277 clearfix" >
         <!-- 主体 -->
     <div class='BodyCenter BodyCenter8932277 clearfix'><form id="customForm8932277" action="/index.php?c=Front/CustomForm&a=save" method="post" class="Form-containt">
     <input type="hidden" name="submitType" value="ajax" />
@@ -505,17 +505,11 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
             </ul>
 </form>
 
-<script type="text/javascript">
-    addScript('/skinp/modules/ModuleCustomFormGiant/customformgiant.js', function () {
-        initCustomFormGiant('8932277', '101', {
-                        lang: {"plz_enter":"\u8bf7\u586b\u5199","plz_select":"\u8bf7\u9009\u62e9","upload_incorrect_type_file":"\u6587\u4ef6\u683c\u5f0f\u4e0d\u7b26\u5408","uploading_and_wait_a_moment":"\u4e0a\u4f20\u4e2d\uff0c\u8bf7\u7a0d\u540e...","n_items_have_been_selected":"\u5df2\u9009\u62e9{n}\u9879","select2":"\u786e\u5b9a","plz_enter_numbers":"\u8bf7\u8f93\u5165\u6570\u5b57","please_enter":"\u8bf7\u8f93\u5165","mobileformat":"\u624b\u673a\u53f7\u7801\u683c\u5f0f\u4e0d\u6b63\u786e\uff01","emailfomart":"\u7535\u5b50\u90ae\u7bb1\u683c\u5f0f\u4e0d\u6b63\u786e\uff01","plz_enter_the_correct_phone_number":"\u8bf7\u586b\u5199\u6b63\u786e\u7684\u7535\u8bdd\u53f7\u7801\uff0c\u683c\u5f0f\u5982\u533a\u53f7-\u7535\u8bdd\u53f7\u7801","plz_enter_the_correct_tel_or_mobile_number":"\u8bf7\u586b\u5199\u5ea7\u673a\u683c\u5f0f\uff1a\u533a\u53f7-\u7535\u8bdd\u53f7\u7801\u6216\u624b\u673a\u53f7\u7801","plz_enter_the_correct_idcard_number":"\u8bf7\u586b\u5199\u6b63\u786e\u7684\u8eab\u4efd\u8bc1","plz_select_one_of_these_items":"\u8bf7\u9009\u62e9\u5176\u4e2d\u4e00\u9879","plz_select_at_least_one_item":"\u8bf7\u81f3\u5c11\u9009\u62e9\u4e00\u9879","plz_select_a_file_to_upload":"\u8bf7\u9009\u62e9\u6587\u4ef6\u4e0a\u4f20","plz_select_the_region":"\u8bf7\u9009\u62e9\u5730\u533a","plz_select_the_date":"\u8bf7\u9009\u62e9\u65e5\u671f","the_date_is_not_in_the_correct_format":"\u65e5\u671f\u683c\u5f0f\u4e0d\u6b63\u786e","plz_fill_in_the_item":"\u8be5\u9879\u4e0d\u80fd\u4e3a\u7a7a","form_submitting":"\u8868\u5355\u63d0\u4ea4\u4e2d\uff0c\u8bf7\u7a0d\u5019...","submit_success":"\u63d0\u4ea4\u6210\u529f","submit_failed":"\u63d0\u4ea4\u5931\u8d25"}
-        });
-    });
-</script></div>
+</div>
 </div>
 
 </div>
-<div class="ModuleItem  StaticModule mhidden-sm" wo="600" id="module_8930367"  >
+<div class="ModuleItem  StaticModule mhidden-sm" wo="600" id="module_8930367"  style="display: none;">
 <div class="ModuleCustomFormGiant layout-101 layout-color-green module_8930367 clearfix">
         <!-- 主体 -->
     <div class='BodyCenter BodyCenter8930367 clearfix'><form id="customForm8930367" action="/index.php?c=Front/CustomForm&a=save" method="post" class="Form-containt">
@@ -609,24 +603,11 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 </div>
 
 </div>
-<div class="ModuleItem  StaticModule " wo="600" id="module_8910142"  >
+<div class="ModuleItem  StaticModule " wo="600" id="module_8910142" style="display: none" >
 <div class="ModuleMapGiant layout-101 layout-color- module_8910142 clearfix">
-        <!-- 主体 -->
-    <div class='BodyCenter BodyCenter8910142 clearfix'><div class="mapgiant-container">
-	<script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
-	<div id="mapContainer8910142" class="mapContainer" data-title="" data-lat="23.02436884189762" data-long="113.12077045440674"></div>
-	<script type="text/javascript">
-    $(document).ready(function($) {
-        addScript('/skinp/modules/ModuleMapGiant/ModuleMap.js', function () {
-            var option = {};
-            option.Latitude = '23.02436884189762';
-            option.Longitude = '113.12077045440674';
-            option.ItemTitle = '';
-            initMap("8910142", "101", option);
-        });
-    });
-	</script>
-</div></div>
+        <!-- map -->
+</div>
+</div>
 </div>
 
 </div>
@@ -755,11 +736,6 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8815836",{isFloat:"0"});
-    });
-</script>
 </div>
 </div>
 
@@ -770,156 +746,6 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 	
 </div>
 <!-- 通栏模块 -->
-<!-- 底部导航 -->
-<div class="ModuleItem  "  id="module_8810839"  >
-<div class="FootNavQRCode FootBar" style="z-index:899" onclick="QRShow();">
-    <div class="FootNavMask"></div>
-    <span class="FootNavQRCodeImg" style="display:block;"><img style="width: 160px; height: 160px;" src="" /></span>
-</div>
-<div class="QQServices" style="z-index:1000" onclick="showService();">
-    <div class="FootNavMask"></div>
-    <ul class="QQList">
-		        <li class="QQCancel">取消</li>
-    </ul>
-</div>
-<div id="MobileFootNavRenderElem" class="mobileNavRenderElem " style="position:static;"></div>
-<div id="MobileFootNav" class="footer FootBar " style="z-index:900;" bgcolorrelatedtomobilenav="0" ParamfontColor="" enable = "1">
-    <ul class="foot-nav-list" style="">
-		        <li style="width:33.33%;display:none;" itemid=1>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li><li style="width:33.33%; " itemid=2>
-            <a href="tel:">
-                <span class="icon footTel" style=""></span>
-                            </a>
-        </li>
-                <li style="width:33.33%;" itemid=3>
-            <a href="#top" target="_self">
-                <span class="icon footToTop" style=""></span>
-                            </a>
-        </li>
-                <li style="width:33.33%;display:none;" itemid=4>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=5>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=6>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;" itemid=7>
-            <a onclick="showHomePage()">
-                <span class="icon homePage" style=""></span>
-                            </a>
-        </li>
-                <li style="width:33.33%;display:none;" itemid=8>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=9>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=11>
-            <a href="/ProductClassPage">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>    </ul>
-</div><script type="text/javascript">
-    function QRShow() {
-        $(".QQServices").hide();
-        $(".FootNavQRCode").toggle();
-        var dmHeight = $(".FootNavQRCodeImg").height();
-        var sTop = $(".footer").offset().top - dmHeight;
-        var left = $(".footer").offset().left;
-        var width = $('#pagebody').width();
-
-        if (navigator.platform.toLowerCase().indexOf("win") > -1) width = parseInt(width) - 17;
-        if (typeof (modulesContainers) != 'undefined') {
-            $(".FootNavQRCodeImg").css({
-                "width": $('#pagebody').width() - 6,
-                "bottom": $(".footer").height(),
-                "left": left + "px",
-                "height": dmHeight + "px"
-            });
-            $(".FootNavMask").css({
-                "width": "100%",
-                "height": $('#pagebody').outerHeight() + "px",
-                "top": $('#pagebody').offset().top + "px"
-            });
-        } else {
-            $(".FootNavQRCodeImg").css({
-                "width": "192px",
-                "height": "192px",
-                "top": "initial",
-                "bottom": $('#MobileFootNav').innerHeight(),
-                "left": ($('body').outerWidth() / 2 - $(".FootNavQRCodeImg").outerWidth() / 2)
-            });
-            $(".FootNavMask").css({"width": "100%", "height": "100%", "top": "0"});
-        }
-        return false;
-    }
-    function showService() {
-        $(".QQServices").show();
-        $(".FootNavQRCode").hide();
-        if (typeof (modulesContainers) != 'undefined') {
-            $(".mobileNav").css("z-index",10);
-            var dmHeight = $(".QQList").outerHeight();
-            var sTop = $(".footer").offset().top - dmHeight+45;
-            var left = $(".footer").offset().left;
-            var width = $('#pagebody').width();
-            if (navigator.platform.toLowerCase().indexOf("win") > -1) width = parseInt(width) - 17;
-            $(".QQList").css({ "width": $('#pagebody').outerWidth() - 6 + "px", "top": sTop + "px", "left": left + "px", "height": dmHeight + "px" });
-            $(".FootNavMask").css({ "width": "100%", "height": $('#pagebody').outerHeight() + "px", "top": $('#pagebody').offset().top + "px" });
-        } else {
-            $(".QQList").css({
-                "bottom": "0px"
-            });
-            $(".FootNavMask").css({ "width": "100%", "height": "100%", "top": "0" });
-        }
-        return false;
-    }
-    $(document).on("click", document.body, function (e) {
-        if ($(e.target).hasClass("QQCancel")) {
-            if (typeof (modulesContainers) != 'undefined') {
-                $(".QQList").removeAttr("style");
-            }
-            $(".QQServices").hide();
-            e.stopPropagation();
-        }
-    });
-    function showHomePage() {
-        if (window.location.search.indexOf('view=1') > -1) {
-            window.location.href = 'http://' + window.location.host + '?view=1&SiteType=1';
-        } else {
-            window.location.href = 'http://' + window.location.host + '?SiteType=1';
-        }
-    }
-    $("#MobileFootNavRenderElem").remove();
-
-    function getUrlParam(name) {
-        //构造一个含有目标参数的正则表达式对象
-        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
-        //匹配目标参数
-        var r = window.location.search.substr(1).match(reg);
-        //返回参数值
-        if (r != null) {
-            return decodeURI(r[2]);
-        }
-        return null;
-    }
-
-	$(function(){
-		if($('.footNavShopCartNum').length > 0){
-
-		}
-	});
-</script>
-</div>
 <script type="text/javascript">
     var rawUrl="";
     var Page="YouZhan.SiteFront.CommonPage_366102";
@@ -940,9 +766,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		@media screen and (max-width:1200px) {
 			* {cursor: url(/images/Mouse_button.png) 10 10,all !important;}
 		}
-	</style><script type='text/javascript'>
-        delayload({ id: ['pagebody'], src: '/images/loading2.gif', bgsrc: '/images/imgbg.png' });
-	</script>
+	</style>
 <script>
 	//手机版的产品详情页不需要页头页尾，这里删除页头页尾的DOM以优化加载速度
 	if("False" == "False" && $(window).width() < 700 && window.location.toString().toLowerCase().indexOf('productdetail') > -1){
