--- a/news1.html
+++ b/news1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><!--PHP-->
+<html>
 <head>
 	<title>XX茶叶获评国家农业产业化重点龙头企业</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
@@ -293,7 +293,7 @@
 		 </div>
 	 </div>
 	 <div id="Menu_510153_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
-		 <a href="newslist.html" target="_self" class="main-nav-item fontm OneRow">行业资讯</a>
+		 <a href="newslist.html" target="_self" class="main-nav-item fontm OneRow main-nav-item-hover">行业资讯</a>
 		 <div id="SubMenu_510153_8815286" class="sub-nav-item-group">
 		 </div>
 	 </div>
@@ -458,12 +458,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 
 
 <script>
-	loadCommentList();
-	function loadCommentList(){
-		$('.news-comment').load("/index.php?c=front/NewsComment&a=showpc&ArticleID=401849");
-		$('.newsmobile-comment').load("/index.php?c=front/NewsComment&a=showmobile&ArticleID=401849&ShowMsgIcon=1");
-	}
-	//END OF 加载评论相关
+
 
 	$('.NewsContent img:eq(0)').clone().hide().prependTo('body');
 	changeFontSize($('#module_8850261'));
@@ -507,56 +502,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		$('.ShareIcon').click();
 	})
 	
-	//禁止转载功能	
-	
 
-/*
-		$(".share-news-pc").addClass('bdsharebuttonbox').append(
-			'<div class="shareitem" title="分享到腾讯微博">'+
-			'<img data-cmd="tqq" src="/images/NewsDetail/tengxun.jpg" width="40">'+
-			'</div>'+
-
-			'<div class="shareitem" data-app="QZone" title="分享到QQ空间">'+
-			'<img data-cmd="qzone" src="/images/NewsDetail/qzone.jpg" width="40">'+
-			'</div>'+
-
-			'<div class="shareitem" data-app="QQ" >'+
-			'<img data-cmd="sqq" src="/images/NewsDetail/QQ.jpg" width="40">'+
-			'</div>'+
-
-			'<div class="shareitem" data-app="sinaWeibo" title="分享到新浪微博">'+
-			'<img data-cmd="tsina" src="/images/NewsDetail/weibo.jpg" width="40">'+
-			'</div>'+
-
-			'<div class="shareitem" data-app="weixin" title="分享到微信">'+
-			'<img data-cmd="weixin" src="/images/NewsDetail/wechat.jpg" width="40">'+
-			'</div>'
-		);	
-		$(".share-news-mobile").addClass('bdsharebuttonbox').append(
-			'<div class="shareitem" title="分享到腾讯微博">'+
-			'<img src="/images/NewsDetail/tengxun.jpg" width="40">'+
-			'</div>'+
-
-			'<div class="shareitem" data-app="QZone" title="分享到QQ空间">'+
-			'<img  src="/images/NewsDetail/qzone.jpg" width="40">'+
-			'</div>'+
-
-			'<div class="shareitem" data-app="QQ" >'+
-			'<img src="/images/NewsDetail/QQ.jpg" width="40">'+
-			'</div>'+
-
-			'<div class="shareitem" data-app="sinaWeibo" title="分享到新浪微博">'+
-			'<img src="/images/NewsDetail/weibo.jpg" width="40">'+
-			'</div>'+
-
-			'<div class="shareitem" data-app="weixin" title="分享到微信">'+
-			'<img src="/images/NewsDetail/wechat.jpg" width="40">'+
-			'</div>'
-		);
-*/	
-		
-	//文章折叠
-	
 
 	
 	</script>
@@ -597,130 +543,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		</div>
 	</div>
 </div>
-<script>
-window.WeiXinNotAutoShare = true;
-var invite = null;
-$.ajax({ url: "/index.php?c=GetUserInviteId", async: false, success: function (data) {
-		invite = data.trim();
-		//alert(invite);
-	}
-});
-if(!invite) invite = getCookie('WebUserID');
-var addstr = "invite=" + invite;
-var urls = window.location.href.toString().split('#');
-if(urls.length > 1) urls[1] = urls[1].replace(/invite\d+/gi,'');
-var querystring = window.location.search;
-if(querystring){ //过滤掉一些参数
-	querystring = querystring.replace('from=groupmessage','');
-	querystring = querystring.replace(/isappinstalled=\d+/gi,'');
-	querystring = querystring.replace(/wxal=\d+/gi,'');
-	querystring = querystring.replace(/invite=\d+/gi,'');
-	querystring = querystring.replace(/&+/gi,'&');
-	querystring = querystring.replace(/&+$/gi,'');
-	querystring = querystring.replace(/^(\?)/gi,'');
-}
-if(querystring.indexOf("?") == -1) querystring = "?" + querystring;
-querystring += "&" + addstr;
-//querystring += "&wxal=1";
-var shareurl  = "";
-if(!shareurl) shareurl = "http://" + window.location.host + window.location.pathname + querystring + window.location.hash;
-shareurl = shareurl.replace(/(\?&)/gi,'?');
-if(shareurl.indexOf("invite=") > -1 && shareurl.indexOf("#invite") > -1) shareurl = shareurl.replace(/#invite\d+/gi,"");
-//alert(shareurl);
-var urlhash = window.location.hash;
-urlhash = urlhash.replace(/#invite\d+/gi,"");
-urlhash = urlhash.replace(/#wxal=1/gi,"");
-if(invite) urlhash += "#invite" + invite;
-//urlhash += "#wxal=1";
-window.location.hash = urlhash;
-$(window).load(function(){
-	$(".ModuleShare").appendTo($("body"));
-	$("#copyurl").click(function(){
-		$("#divTipsModal0 .jiantou").hide(1);
-		$("#divTipsModal0").modal();
-		$("#divTipsModal0 .modal-body").html("您的分享链接为：<br /><span style='color:#ff0000;'>"+shareurl+"</span><br />（长按链接可复制）");
-	});
-	if(!window._bd_share_config){
-		window._bd_share_config = {
-			common : {
-				bdText : document.title,
-				//bdDesc : '自定义分享摘要',
-				//bdPic : '自定义分享图片',
-				bdUrl : shareurl
-			},
-			share: [{
-				"bdSize": 16
-			}],
-			selectShare: [{
-				"bdselectMiniList": ['qzone', 'tqq', 'kaixin001', 'bdxc', 'tqf']
-			}]
-		}
-	}else{
-		window._bd_share_config.common.bdText = document.title;
-		window._bd_share_config.common.bdUrl = shareurl;
-	}
-	with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?cdnversion='+~(-new Date()/36e5)]; //这个脚本必须在初始化了 _bd_share_config 之后加载
-	var share_config = {
-		url:shareurl,
-		title:document.title,
-		//desc:'desc',
-		//img:'http://www.wangjunfeng.com/img/face.jpg',
-		//img_title:'img_title',
-		//from:'from'
-	};
-	var share_obj = new nativeShare('divShareA0',share_config);
-	if(share_obj.isUC()){
-		$("#divShareIcon0").click(function(){
-			share_obj.share('');
-		});
-	}else if(share_obj.isQQ()){
-		$("#divShareIcon0").click(function(){
-			$('#divShare0').toggle(300,function(){
-				$('#divShare0 .shareitem').click(function(){
-					var item = $(this);
-					if(item.attr('data-app')){
-						share_obj.share(item.attr('data-app'));
-						$('#divShare0').toggle(300);
-						return false;
-					}
-				});
-			});
-		});
-	}else if(share_obj.is_weixin()){		
-		with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://res.wx.qq.com/open/js/jweixin-1.0.0.js?version='+~(-new Date()/36e5)];
-		if(typeof(WeiXinShare) == 'undefined')with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='./js/weixinshare.js?version='+~(-new Date()/36e5)];
 
-		var urlhash = window.location.hash;
-		urlhash = urlhash.replace(/#invite\d+/gi,"");
-		urlhash = urlhash.replace(/#wxal=1/gi,"");
-		if(invite) urlhash += "#invite" + invite;
-		//urlhash += "#wxal=1";
-		window.location.hash = urlhash;
-		$("#divTipsModal0").appendTo($('body'));
-		$("#divShareIcon0").click(function(){
-			$("#divTipsModal0 .jiantou").show(1);
-			$("#divTipsModal0").modal();
-			$("#divTipsModal0 .modal-body").html("您的分享链接为：<br /><span style='color:#ff0000;'>"+shareurl+"</span><br />（长按链接可复制）");
-		});
-		
-		window.wxshareimg = 'http://r369.mdemo./images/20171012164118681338.jpg';
-		var sharejson = {
-            title: document.title, // 分享标题
-            desc: $('meta[name="description"]').attr("content") || $('meta[name="keywords"]').attr("content"), // 分享描述
-            link: shareurl.split('#')[0], //分享链接
-            imgUrl: window.wxshareimg ? window.wxshareimg : 'http://' + document.domain + '/images/wxshare-default-pic.jpg'
-        };
-		WeiXinShare(sharejson);
-
-	}else{
-		$("#divShareIcon0").click(function(){
-			$('#divShare0').toggle(300,function(){
-				
-			});
-		});
-	}
-});
-</script>
 </div>
 </div>
 </div>
@@ -839,11 +662,7 @@ $(window).load(function(){
 
 </div>
 </div><div class='clearfix visible-lg'></div><div class='clearfix visible-md'></div><div class='clearfix visible-sm'></div><div class='clearfix visible-xs'></div></div></div>
-<script type="text/javascript">
-	addScript('/skinp/modules/ModuleGridGiant/modulegrid.js',function(){
-        initGridGiant("8815836",{isFloat:"0"});
-    });
-</script>
+
 </div>
 </div>
 
@@ -854,180 +673,15 @@ $(window).load(function(){
 	
 </div>
 <!-- 通栏模块 -->
-<!-- 底部导航 -->
-<div class="ModuleItem  "  id="module_8810839"  >
-<div class="FootNavQRCode FootBar" style="z-index:899" onclick="QRShow();">
-    <div class="FootNavMask"></div>
-    <span class="FootNavQRCodeImg" style="display:block;"><img style="width: 160px; height: 160px;" src="" /></span>
-</div>
-<div class="QQServices" style="z-index:1000" onclick="showService();">
-    <div class="FootNavMask"></div>
-    <ul class="QQList">
-		        <li class="QQCancel">取消</li>
-    </ul>
-</div>
-<div id="MobileFootNavRenderElem" class="mobileNavRenderElem " style="position:static;"></div>
-<div id="MobileFootNav" class="footer FootBar " style="z-index:900;" bgcolorrelatedtomobilenav="0" ParamfontColor="" enable = "1">
-    <ul class="foot-nav-list" style="">
-		        <li style="width:33.33%;display:none;" itemid=1>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li><li style="width:33.33%; " itemid=2>
-            <a href="tel:">
-                <span class="icon footTel" style=""></span>
-                            </a>
-        </li>
-                <li style="width:33.33%;" itemid=3>
-            <a href="#top" target="_self">
-                <span class="icon footToTop" style=""></span>
-                            </a>
-        </li>
-                <li style="width:33.33%;display:none;" itemid=4>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=5>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=6>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;" itemid=7>
-            <a onclick="showHomePage()">
-                <span class="icon homePage" style=""></span>
-                            </a>
-        </li>
-                <li style="width:33.33%;display:none;" itemid=8>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=9>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=11>
-            <a href="/ProductClassPage">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>    </ul>
-</div><script type="text/javascript">
-    function QRShow() {
-        $(".QQServices").hide();
-        $(".FootNavQRCode").toggle();
-        var dmHeight = $(".FootNavQRCodeImg").height();
-        var sTop = $(".footer").offset().top - dmHeight;
-        var left = $(".footer").offset().left;
-        var width = $('#pagebody').width();
-
-        if (navigator.platform.toLowerCase().indexOf("win") > -1) width = parseInt(width) - 17;
-        if (typeof (modulesContainers) != 'undefined') {
-            $(".FootNavQRCodeImg").css({
-                "width": $('#pagebody').width() - 6,
-                "bottom": $(".footer").height(),
-                "left": left + "px",
-                "height": dmHeight + "px"
-            });
-            $(".FootNavMask").css({
-                "width": "100%",
-                "height": $('#pagebody').outerHeight() + "px",
-                "top": $('#pagebody').offset().top + "px"
-            });
-        } else {
-            $(".FootNavQRCodeImg").css({
-                "width": "192px",
-                "height": "192px",
-                "top": "initial",
-                "bottom": $('#MobileFootNav').innerHeight(),
-                "left": ($('body').outerWidth() / 2 - $(".FootNavQRCodeImg").outerWidth() / 2)
-            });
-            $(".FootNavMask").css({"width": "100%", "height": "100%", "top": "0"});
-        }
-        return false;
-    }
-    function showService() {
-        $(".QQServices").show();
-        $(".FootNavQRCode").hide();
-        if (typeof (modulesContainers) != 'undefined') {
-            $(".mobileNav").css("z-index",10);
-            var dmHeight = $(".QQList").outerHeight();
-            var sTop = $(".footer").offset().top - dmHeight+45;
-            var left = $(".footer").offset().left;
-            var width = $('#pagebody').width();
-            if (navigator.platform.toLowerCase().indexOf("win") > -1) width = parseInt(width) - 17;
-            $(".QQList").css({ "width": $('#pagebody').outerWidth() - 6 + "px", "top": sTop + "px", "left": left + "px", "height": dmHeight + "px" });
-            $(".FootNavMask").css({ "width": "100%", "height": $('#pagebody').outerHeight() + "px", "top": $('#pagebody').offset().top + "px" });
-        } else {
-            $(".QQList").css({
-                "bottom": "0px"
-            });
-            $(".FootNavMask").css({ "width": "100%", "height": "100%", "top": "0" });
-        }
-        return false;
-    }
-    $(document).on("click", document.body, function (e) {
-        if ($(e.target).hasClass("QQCancel")) {
-            if (typeof (modulesContainers) != 'undefined') {
-                $(".QQList").removeAttr("style");
-            }
-            $(".QQServices").hide();
-            e.stopPropagation();
-        }
-    });
-    function showHomePage() {
-        if (window.location.search.indexOf('view=1') > -1) {
-            window.location.href = 'http://' + window.location.host + '?view=1&SiteType=1';
-        } else {
-            window.location.href = 'http://' + window.location.host + '?SiteType=1';
-        }
-    }
-    $("#MobileFootNavRenderElem").remove();
-
-    function getUrlParam(name) {
-        //构造一个含有目标参数的正则表达式对象
-        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
-        //匹配目标参数
-        var r = window.location.search.substr(1).match(reg);
-        //返回参数值
-        if (r != null) {
-            return decodeURI(r[2]);
-        }
-        return null;
-    }
-
-	$(function(){
-		if($('.footNavShopCartNum').length > 0){
 
 
-		}
-	});
-</script>
-</div>
-<script type="text/javascript">
-    var rawUrl="";
-    var Page="YouZhan.SiteFront.NewsDetail";
-    var PageID="366512";
-    var PageConf = {"EnableBodyTopZone":true,"EnableBodyFootZone":true,"EnableBodyLeftZone":false,"EnableBodyRightZone":false,"EnableBodyMain1Zone":true,"EnableBodyMain2Zone":false,"EnableBodyMain3Zone":false,"EnableBodyMain4Zone":false,"HeaderZonePositionType":0,"FooterZonePositionType":0,"BodyTopZonePositionType":0,"BodyFootZonePositionType":0,"BodyLeftZonePositionType":0,"BodyRightZonePositionType":0,"BodyMain1ZonePositionType":0,"BodyMain2ZonePositionType":0,"BodyMain3ZonePositionType":0,"BodyMain4ZonePositionType":0,"EnableFreeMain":true,"EnableBodyFullPage":true};
-    var SCRIPT_NAME="/index.php";
-    var SiteType="1";
-    var IsUserCenter = "0";
-    var hasFullSwitch = 0;
-    var isPlatformVersion = "1";
-    if(navigator.appName == "Microsoft Internet Explorer" && navigator.appVersion .split(";")[1].replace(/[ ]/g,"")=="MSIE6.0" || navigator.appName == "Microsoft Internet Explorer" && navigator.appVersion .split(";")[1].replace(/[ ]/g,"")=="MSIE7.0" || navigator.appName == "Microsoft Internet Explorer" && navigator.appVersion .split(";")[1].replace(/[ ]/g,"")=="MSIE8.0"){
-		checkBowerTip();
-	}
-</script>
 
 <!-- 加载设计界面所用的脚本和css -->
 	<style>
 		@media screen and (max-width:1200px) {
 			* {cursor: url(/images/Mouse_button.png) 10 10,all !important;}
 		}
-	</style><script type='text/javascript'>
-        delayload({ id: ['pagebody'], src: '/images/loading2.gif', bgsrc: '/images/imgbg.png' });
-	</script>
+	</style>
 <script>
 	//手机版的产品详情页不需要页头页尾，这里删除页头页尾的DOM以优化加载速度
 	if("False" == "False" && $(window).width() < 700 && window.location.toString().toLowerCase().indexOf('productdetail') > -1){
@@ -1035,21 +689,12 @@ $(window).load(function(){
 	}
     if (!IsWeiXin){
         addScript('./js/floaters.js',function(){
-            addScript('/index.php?c=Front/IMPanel',null);
         });
         (function(){ var bp = document.createElement('script'); bp.src = ''; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(bp, s);})();
     }else{
         addScript('/scripts/jweixin-1.0.0.js?ddd');
         addScript('/scripts/party/weixinshare.js?rrr');
     }
-    $(window).load(function(){
-        if (IsWeiXin) {
-            var match = window.location.href.match(/#invite(\d+)/i);
-            var barurl = "/index.php?c=front/UserBar";
-            if(match && match[1]) barurl += "&invite="+match[1];
-            if ("YouZhan.SiteFront.NewsDetail" == "YouZhan.SiteFront.HomeIndex" || "YouZhan.SiteFront.NewsDetail" == "YouZhan.SiteFront.NewsDetail" || "YouZhan.SiteFront.NewsDetail" == "YouZhan.SiteFront.ProductDetail") $("#userbar").load(barurl);
-        }
-    });
 </script>
 
 </body>
