--- a/newslist.html
+++ b/newslist.html
@@ -293,7 +293,7 @@
 					</div>
 	</div>
 		<div id="Menu_510153_8815286" class="main-nav-item-group" onmouseover="showSubMenu(this)" onmouseout="hideSubMenu(this, event)">
-		<a href="newslist.html" target="_self" class="main-nav-item fontm OneRow">行业资讯</a>
+		<a href="newslist.html" target="_self" class="main-nav-item fontm OneRow main-nav-item-hover">行业资讯</a>
 				<div id="SubMenu_510153_8815286" class="sub-nav-item-group">
 					</div>
 	</div>
@@ -796,157 +796,6 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 	
 </div>
 <!-- 通栏模块 -->
-<!-- 底部导航 -->
-<div class="ModuleItem  "  id="module_8810839"  >
-<div class="FootNavQRCode FootBar" style="z-index:899" onclick="QRShow();">
-    <div class="FootNavMask"></div>
-    <span class="FootNavQRCodeImg" style="display:block;"><img style="width: 160px; height: 160px;" src="" /></span>
-</div>
-<div class="QQServices" style="z-index:1000" onclick="showService();">
-    <div class="FootNavMask"></div>
-    <ul class="QQList">
-		        <li class="QQCancel">取消</li>
-    </ul>
-</div>
-<div id="MobileFootNavRenderElem" class="mobileNavRenderElem " style="position:static;"></div>
-<div id="MobileFootNav" class="footer FootBar " style="z-index:900;" bgcolorrelatedtomobilenav="0" ParamfontColor="" enable = "1">
-    <ul class="foot-nav-list" style="">
-		        <li style="width:33.33%;display:none;" itemid=1>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li><li style="width:33.33%; " itemid=2>
-            <a href="tel:">
-                <span class="icon footTel" style=""></span>
-                            </a>
-        </li>
-                <li style="width:33.33%;" itemid=3>
-            <a href="#top" target="_self">
-                <span class="icon footToTop" style=""></span>
-                            </a>
-        </li>
-                <li style="width:33.33%;display:none;" itemid=4>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=5>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=6>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;" itemid=7>
-            <a onclick="showHomePage()">
-                <span class="icon homePage" style=""></span>
-                            </a>
-        </li>
-                <li style="width:33.33%;display:none;" itemid=8>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=9>
-            <a href="">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>        <li style="width:33.33%;display:none;" itemid=11>
-            <a href="/ProductClassPage">
-                <span class="icon" style=""></span>
-                            </a>
-        </li>    </ul>
-</div><script type="text/javascript">
-    function QRShow() {
-        $(".QQServices").hide();
-        $(".FootNavQRCode").toggle();
-        var dmHeight = $(".FootNavQRCodeImg").height();
-        var sTop = $(".footer").offset().top - dmHeight;
-        var left = $(".footer").offset().left;
-        var width = $('#pagebody').width();
-
-        if (navigator.platform.toLowerCase().indexOf("win") > -1) width = parseInt(width) - 17;
-        if (typeof (modulesContainers) != 'undefined') {
-            $(".FootNavQRCodeImg").css({
-                "width": $('#pagebody').width() - 6,
-                "bottom": $(".footer").height(),
-                "left": left + "px",
-                "height": dmHeight + "px"
-            });
-            $(".FootNavMask").css({
-                "width": "100%",
-                "height": $('#pagebody').outerHeight() + "px",
-                "top": $('#pagebody').offset().top + "px"
-            });
-        } else {
-            $(".FootNavQRCodeImg").css({
-                "width": "192px",
-                "height": "192px",
-                "top": "initial",
-                "bottom": $('#MobileFootNav').innerHeight(),
-                "left": ($('body').outerWidth() / 2 - $(".FootNavQRCodeImg").outerWidth() / 2)
-            });
-            $(".FootNavMask").css({"width": "100%", "height": "100%", "top": "0"});
-        }
-        return false;
-    }
-    function showService() {
-        $(".QQServices").show();
-        $(".FootNavQRCode").hide();
-        if (typeof (modulesContainers) != 'undefined') {
-            $(".mobileNav").css("z-index",10);
-            var dmHeight = $(".QQList").outerHeight();
-            var sTop = $(".footer").offset().top - dmHeight+45;
-            var left = $(".footer").offset().left;
-            var width = $('#pagebody').width();
-            if (navigator.platform.toLowerCase().indexOf("win") > -1) width = parseInt(width) - 17;
-            $(".QQList").css({ "width": $('#pagebody').outerWidth() - 6 + "px", "top": sTop + "px", "left": left + "px", "height": dmHeight + "px" });
-            $(".FootNavMask").css({ "width": "100%", "height": $('#pagebody').outerHeight() + "px", "top": $('#pagebody').offset().top + "px" });
-        } else {
-            $(".QQList").css({
-                "bottom": "0px"
-            });
-            $(".FootNavMask").css({ "width": "100%", "height": "100%", "top": "0" });
-        }
-        return false;
-    }
-    $(document).on("click", document.body, function (e) {
-        if ($(e.target).hasClass("QQCancel")) {
-            if (typeof (modulesContainers) != 'undefined') {
-                $(".QQList").removeAttr("style");
-            }
-            $(".QQServices").hide();
-            e.stopPropagation();
-        }
-    });
-    function showHomePage() {
-        if (window.location.search.indexOf('view=1') > -1) {
-            window.location.href = 'http://' + window.location.host + '?view=1&SiteType=1';
-        } else {
-            window.location.href = 'http://' + window.location.host + '?SiteType=1';
-        }
-    }
-    $("#MobileFootNavRenderElem").remove();
-
-    function getUrlParam(name) {
-        //构造一个含有目标参数的正则表达式对象
-        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
-        //匹配目标参数
-        var r = window.location.search.substr(1).match(reg);
-        //返回参数值
-        if (r != null) {
-            return decodeURI(r[2]);
-        }
-        return null;
-    }
-
-	$(function(){
-		if($('.footNavShopCartNum').length > 0){
-
-
-		}
-	});
-</script>
-</div>
 <script type="text/javascript">
     var rawUrl="";
     var Page="YouZhan.SiteFront.CommonPage_366101";
@@ -967,9 +816,7 @@ addScript('/skinp/modules/ModuleNavGiant/menu.js',function(){
 		@media screen and (max-width:1200px) {
 			* {cursor: url(/images/Mouse_button.png) 10 10,all !important;}
 		}
-	</style><script type='text/javascript'>
-        delayload({ id: ['pagebody'], src: '/images/loading2.gif', bgsrc: '/images/imgbg.png' });
-	</script>
+	</style>
 <script>
 	//手机版的产品详情页不需要页头页尾，这里删除页头页尾的DOM以优化加载速度
 	if("False" == "False" && $(window).width() < 700 && window.location.toString().toLowerCase().indexOf('productdetail') > -1){
